--- a/index.html
+++ b/index.html
@@ -29,6 +29,90 @@
     <!-- Ярослав -->
     <!-- Оля -->
     <!-- Саша -->
+    <div class="sasha-slider sasha-autoplay">
+      <div class="card">
+        <img
+          src="./images/sasha-img/project1.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №1</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project2.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №2</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project3.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №3</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project4.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №4</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project5.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №5</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project6.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №6</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project7.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №7</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project8.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №8</p></div>
+      </div>
+      <div class="card">
+        <img
+          src="./images/sasha-img/project9.jpg"
+          alt="Фото проекту"
+          width="370"
+          height="294"
+        />
+        <div class="card-label"><p>Проект №9</p></div>
+      </div>
+    </div>
+
     <!-- Толик -->
     <!-- Витя -->
     <div></div>
@@ -45,5 +129,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/sasha.js"></script>
   </body>
 </html>
