--- a/index.html
+++ b/index.html
@@ -30,6 +30,53 @@
     <!-- Оля -->
     <!-- Саша -->
     <!-- Толик -->
+    <div class="fade tolik">
+      <div class="item-tolik">
+        <img src="./images/tolik/bracer.png" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/circlet.png" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/clar.jpg" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/drum.png" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/gauntlets.png" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/radic.jpg" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/robe.png" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/tang.png" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+      <div class="item-tolik">
+        <img src="./images/tolik/branch.jpg" alt="dota" width="600">
+          <p>Lorem, ipsum dolor.</p>
+        </img>
+      </div>
+    </div>
     <!-- Витя -->
     <div></div>
     <script
@@ -45,5 +92,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/tolik.js"></script>
   </body>
 </html>
