--- a/index.html
+++ b/index.html
@@ -31,7 +31,29 @@
     <!-- Саша -->
     <!-- Толик -->
     <!-- Витя -->
-    <div></div>
+
+    <div class="autoplay">
+      <div>
+        <img src="./images/img(1).jpg" alt="собака" width="500" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <img src="./images/img(2).jpg" alt="собака" width="500" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <img src="./images/img(3).jpg" alt="собака" width="500" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <img src="./images/img(4).jpg" alt="собака" width="500" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div>
+        <img src="./images/img(5).jpg" alt="собака" width="500" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
@@ -44,6 +66,6 @@
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-    <script src="./js/slider.js"></script>
+    <script src="./js/viktor.js"></script>
   </body>
 </html>
