--- a/index.html
+++ b/index.html
@@ -32,47 +32,47 @@
     <!-- Толик -->
     <div class="fade tolik">
       <div class="item-tolik">
-        <img src="./images/tolik/bracer.png" alt="dota" width="600">
+        <img src="./images/tolik/bracer.png" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/circlet.png" alt="dota" width="600">
+        <img src="./images/tolik/circlet.png" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/clar.jpg" alt="dota" width="600">
+        <img src="./images/tolik/clar.jpg" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/drum.png" alt="dota" width="600">
+        <img src="./images/tolik/drum.png" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/gauntlets.png" alt="dota" width="600">
+        <img src="./images/tolik/gauntlets.png" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/radic.jpg" alt="dota" width="600">
+        <img src="./images/tolik/radic.jpg" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/robe.png" alt="dota" width="600">
+        <img src="./images/tolik/robe.png" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/tang.png" alt="dota" width="600">
+        <img src="./images/tolik/tang.png" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
       <div class="item-tolik">
-        <img src="./images/tolik/branch.jpg" alt="dota" width="600">
+        <img src="./images/tolik/branch.jpg" alt="dota" width="600" height="600">
           <p>Lorem, ipsum dolor.</p>
         </img>
       </div>
