--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
     <!-- Юля -->
     <!-- Андрій -->
     <!-- Вася -->
+    <div class="one-time">
+      <div>
+        <img src="./images/VO/plane1.jpg" alt="" width="900" />
+        <p class="description">plane in the sky</p>
+      </div>
+      <div>
+        <img src="./images/VO/plane2.jpg" alt="" width="900">
+      <p class="description">beautiful plane</p>
+      </div>
+      <div>
+        <img src="./images/VO/plane3.jpg" alt="" width="900">
+      <p class="description">plane over the city</p>
+      </div>
+      <div>
+        <img src="./images/VO/plane4.jpeg" alt="" width="900">
+      <p class="description">white plane</p>
+      </div>
+
+    </div>
     <!-- Макс -->
     <!-- Альона -->
     <!-- Ярослав -->
@@ -45,5 +64,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/vo.js"></script>
   </body>
 </html>
