--- a/index.html
+++ b/index.html
@@ -20,6 +20,39 @@
   </head>
   <body>
     <!-- Сергій -->
+    <div class="fade">
+      <p>
+        <img
+          src="./img/GettyImages-166152657-cb61ca0fd49e453cb4f1a60b50d281e7.jpg"
+          alt="owl-1"
+          width="500"
+        />
+      </p>
+      <p>
+        <img
+          src="./img/GGO_spread-wings_Mel-Clements.jpg"
+          alt="owl-2"
+          width="500"
+        />
+      </p>
+      <p>
+        <img src="./img/how-to-attract-owls.jpg" alt="owl-3" width="500" />
+      </p>
+      <p>
+        <img
+          src="./img/Northern-saw-whet-owl-David-Mitchell-flickr-e1585174375665.jpg"
+          alt="owl-4"
+          width="500"
+        />
+      </p>
+      <p>
+        <img src="./img/Ranua-Resort-Huuhkaja.jpg" alt="owl-5" width="500" />
+      </p>
+      <p>
+        <img src="./img/T14_0476_068_4x3.jpg" alt="owl-6" width="500" />
+      </p>
+
+    </div>
     <!-- Alex -->
     <!-- Юля -->
     <!-- Андрій -->
