--- a/index.html
+++ b/index.html
@@ -21,6 +21,50 @@
   <body>
     <!-- Сергій -->
     <!-- Alex -->
+    <div class="autoplay">
+      <div class="card">
+        <a href="#">
+          <img src="./images/project1-min.jpg" alt="проєкт"width="400">
+          <p class="text-slider">Тіпа 1й проєкт</p>
+        </a>
+      </div>
+      <div class="card">
+        <a href="#">
+          <img src="./images/project7-min.jpg" alt="проєкт" width="400">
+          <p class="text-slider">Тіпа 2й проєкт</p>
+        </a>
+      </div>
+      <div class="card">
+        <a href="#">
+          <img src="./images/project3-min.jpg" alt="проєкт" width="400">
+          <p class="text-slider">Тіпа 3й проєкт</p>
+        </a>
+      </div>
+      <div>
+        <a href="#">
+          <img src="./images/project4-min.jpg" alt="проєкт"width="400">
+          <p class="text-slider">Тіпа 4й проєкт</p>
+        </a>
+      </div>
+      <div class="card">
+        <a href="#">
+          <img src="./images/project5-min.jpg" alt="проєкт" width="400">
+          <p class="text-slider">Тіпа 5й проєкт</p>
+        </a>
+        </div>
+          <div class="card">
+            <a href="#">
+            <img src="./images/project6-min.jpg" alt="проєкт" width="400">
+            <p class="text-slider">Тіпа 6й проєкт</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+  
+
+
+
     <!-- Юля -->
     <!-- Андрій -->
     <!-- Вася -->
@@ -45,5 +89,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/alex.js"></script>
   </body>
 </html>
