--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
     <!-- Альона -->
     <!-- Ярослав -->
     <!-- Оля -->
+    <div class="autoplay slider-wrap">
+    <div class="item">
+      <img src="./images/img1.jpg" alt="комп" width="250">
+      <p>галерея</p>
+    </div>
+    <div class="item">
+      <img src="./images/img1.jpg" alt="комп" width="250">
+      <p>галерея</p>
+    </div>
+    <div class="item">
+      <img src="./images/img1.jpg" alt="комп" width="250">
+      <p>галерея</p>
+    </div>
+    <div class="item">
+      <img src="./images/img1.jpg" alt="комп" width="250">
+      <p>галерея</p>
+    </div>
+    </div>
     <!-- Саша -->
     <!-- Толик -->
     <!-- Витя -->
