--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
     <!-- Вася -->
     <!-- Макс -->
     <!-- Альона -->
+    <div class="autoplay wrapper">
+      <div class="part">
+        <img src="./images/img1.jpg" alt="desktop" width="350" />
+      </div class="part">
+      <div>
+        <img src="./images/img(02).jpg" alt="application" width="350" />
+      </div>
+      <div class="part">
+        <img src="./images/img(04).jpg" alt="notepad" width="350" />
+      </div>
+      <div>
+        <img src="./images/img(2).jpg" alt="destop" width="350" />
+      </div>
+      <div>
+        <img src="./images/img(08).jpg" alt="sport" width="350" />
+      </div>
+    </div>
+
     <!-- Ярослав -->
     <!-- Оля -->
     <!-- Саша -->
@@ -45,5 +63,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/alona.js"></script>
   </body>
 </html>
