--- a/index.html
+++ b/index.html
@@ -20,51 +20,39 @@
   </head>
   <body>
     <!-- Сергій -->
-    <div class="fade">
+    <div class="fade slider-wrapper">
       <p>
         <img
-          src="./img/GettyImages-166152657-cb61ca0fd49e453cb4f1a60b50d281e7.jpg"
-          alt="owl-1"
-          width="500"
-        />
-      </p>
-      <p>
-        <img
-          src="./img/GGO_spread-wings_Mel-Clements.jpg"
+          src="./images/Northern-saw-whet-owl-David-Mitchell-flickr-e1585174375665.jpg"
           alt="owl-2"
           width="500"
         />
       </p>
       <p>
-        <img src="./img/how-to-attract-owls.jpg" alt="owl-3" width="500" />
+        <img src="./images/Ranua-Resort-Huuhkaja.jpg" alt="owl-2" width="500" />
       </p>
       <p>
         <img
-          src="./img/Northern-saw-whet-owl-David-Mitchell-flickr-e1585174375665.jpg"
+          src="./images/GettyImages-166152657-cb61ca0fd49e453cb4f1a60b50d281e7.jpg"
+          alt="owl-3"
+          width="500"
+        />
+      </p>
+      <p>
+        <img
+          src="./images/GGO_spread-wings_Mel-Clements.jpg"
           alt="owl-4"
           width="500"
         />
       </p>
       <p>
-        <img src="./img/Ranua-Resort-Huuhkaja.jpg" alt="owl-5" width="500" />
+        <img src="./images/how-to-attract-owls.jpg" alt="owl-5" width="500" />
       </p>
       <p>
-        <img src="./img/T14_0476_068_4x3.jpg" alt="owl-6" width="500" />
+        <img src="./images/T14_0476_068_4x3.jpg" alt="owl-6" width="500" />
       </p>
-
     </div>
-    <!-- Alex -->
-    <!-- Юля -->
-    <!-- Андрій -->
-    <!-- Вася -->
-    <!-- Макс -->
-    <!-- Альона -->
-    <!-- Ярослав -->
-    <!-- Оля -->
-    <!-- Саша -->
-    <!-- Толик -->
-    <!-- Витя -->
-    <div></div>
+
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
