--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
     <!-- Андрій -->
     <!-- Вася -->
     <!-- Макс -->
+    <div class="maks-slider variable-width">
+      <div class="maks-slider-item">
+        <img src="./images/maks-img/1.jpg" alt="meme-1" />
+        <p class="maks-slider-item-subtitle">2/5</p>
+      </div>
+      <div class="maks-slider-item">
+        <img src="./images/maks-img/2.jpeg" alt="meme-2" />
+        <p class="maks-slider-item-subtitle">5/5</p>
+      </div>
+      <div class="maks-slider-item">
+        <img src="./images/maks-img/3.jpg" alt="meme-3" />
+        <p class="maks-slider-item-subtitle">4/5</p>
+      </div>
+      <div class="maks-slider-item">
+        <img src="./images/maks-img/4.jpg" alt="meme-4" />
+        <p class="maks-slider-item-subtitle">1/5</p>
+      </div>
+      <div class="maks-slider-item">
+        <img src="./images/maks-img/5.jpg" alt="meme-5" />
+        <p class="maks-slider-item-subtitle">3/5</p>
+      </div>
+    </div>
+
     <!-- Альона -->
     <!-- Ярослав -->
     <!-- Оля -->
@@ -45,5 +68,6 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/maks-slider.js"></script>
   </body>
 </html>
