--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Сергій -->
-    <div class="fade slider-wrapper">
+    <div class="fade">
       <p>
         <img
           src="./images/Northern-saw-whet-owl-David-Mitchell-flickr-e1585174375665.jpg"
